--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,7 @@ jobs:
         cd backend/
         python manage.py test
 
-uild_and_push_to_docker_hub:
+build_and_push_to_docker_hub:
     name: Push Docker image to DockerHub
     runs-on: ubuntu-latest
     needs: tests
@@ -68,8 +68,8 @@ uild_and_push_to_docker_hub:
         uses: docker/login-action@v2
         # При помощи with передаём в action параметры username и password
         with:
-          username: <ваш_username_docker_hub> 
-          password: <ваш_пароль_docker_hub>
+          username: ${{ secrets.DOCKER_USERNAME }} 
+          password: ${{ secrets.DOCKER_HUB_TOKEN }}
           # Хорошо ли держать логин и пароль прямо в коде workflow?
           # Нет, это нехорошо
       - name: Push to DockerHub
